--- a/test-1.html
+++ b/test-1.html
@@ -2,7 +2,7 @@
 
 <div style="width: 100%; max-width: 950px; margin: 20px auto; padding: 30px; background: #ffffff; border: 1px solid #eeeeee; border-radius: 8px; font-family: 'Inter', sans-serif;">
   <h2 style="font-size: 1.4em; color: #333; margin-bottom: 5px; font-weight: 700;">Performance Data Analysis</h2>
-  <p style="font-size: 0.9em; color: #777; margin-bottom: 30px;">Tournament Metrics: WAGR Power (Field Strength) vs. WAGR Earned (Player Performance)</p>
+  <p style="font-size: 0.9em; color: #777; margin-bottom: 30px;">Tournament & Internal Qualifier Verified Records.</p>
   
   <div style="margin-bottom: 50px;">
     <h3 style="font-size: 1.1em; color: #0c2340; margin-bottom: 15px; font-weight: 600; border-bottom: 2px solid #F15A22; padding-bottom: 5px;">Official Tournament Rounds</h3>
@@ -20,13 +20,12 @@
 </div>
 
 <script>
-// ---------- 1. Official Tournament Chart (Power vs Earned 구분) ----------
+// 1. Official Tournament Chart (툴팁 상세 정보 추가)
 const ctxOfficial = document.getElementById('officialTournamentChart').getContext('2d');
-
 new Chart(ctxOfficial, {
   type: 'line',
   data: {
-    labels: ['SEP. 07-09 (Argent)', 'SEP. 15-16 (Highlands)', 'SEP. 22-23 (Badger)', 'OCT. 05-07 (Trinity)', 'DIC. 27-31 (Patriot)'],
+    labels: ['9/07 (Argent)', '9/15 (Highlands)', '9/22 (Badger)', '10/05 (Trinity)', '12/27 (Patriot)'],
     datasets: [{
       label: 'Scoring Avg',
       data: [69.66, 70.66, 71.33, 72.0, 72.0],
@@ -47,16 +46,18 @@ new Chart(ctxOfficial, {
       tooltip: {
         callbacks: {
           afterLabel: function(context) {
-            // Power(필드 강도)와 Earned(선수 성과) 데이터 구분
+            const rounds = ['70-70-69 (-7)', '74-71-70 (-1)', '71-71-76 (+2)', '75-73-74 (+6)', '71-73-72 (+6)'];
+            const rank = ['T3', 'T6', 'T9', 'T12', 'T15'];
             const pwr = ['12.4', '14.1', '11.8', '13.5', '58.2'];
             const earned = ['209', '424', '642', '864', '1080'];
+            const i = context.dataIndex;
             return [
-              `WAGR Power: ${pwr[context.dataIndex]}`,
-              `WAGR Earned: ${earned[context.dataIndex]}`
+              `Round Info: ${rounds[i]}`,
+              `Final Rank: ${rank[i]}`,
+              `--------------------`,
+              `WAGR Power: ${pwr[i]}`,
+              `WAGR Earned: ${earned[i]}`
             ];
-          },
-          labelTextColor: function(context) {
-             return '#333';
           }
         }
       }
@@ -64,9 +65,8 @@ new Chart(ctxOfficial, {
   }
 });
 
-// ---------- 2. Internal Qualifier Chart (Canyons vs Oaks 100% 원본 데이터) ----------
+// 2. Internal Qualifier Chart (날짜 및 코스 최종 보정)
 const ctxInternal = document.getElementById('internalQualifierChart').getContext('2d');
-
 new Chart(ctxInternal, {
   type: 'line',
   data: {
@@ -86,7 +86,7 @@ new Chart(ctxInternal, {
       },
       {
         label: 'TPC SA - Oaks',
-        data: [null, null, null, 81, 74, null, 74, 69, null, 69],
+        data: [null, null, null, 81, 74, null, 69, 74, null, 69],
         borderColor: '#0c2340',
         backgroundColor: 'rgba(12, 35, 64, 0.1)',
         borderWidth: 2,
