--- a/test-1.html
+++ b/test-1.html
@@ -23,24 +23,19 @@
     }
     * { box-sizing: border-box; }
 
-    /* [상단 헤더 핵심 수정] */
+    /* [상단 헤더 - 항상 고정] */
     .sticky-top {
-      position: fixed; /* 고정 상태로 시작 */
-      top: 0; z-index: 1000; width: 100%;
+      position: fixed; /* 페이지 최상단에 항상 고정 */
+      top: 0; left: 0; z-index: 1000; width: 100%;
       background: #ffffff;
-      transition: transform 0.3s ease-in-out; /* 부드러운 이동만 담당 */
       box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      transition: all 0.3s ease; /* 부드러운 변화를 위해 유지 */
     }
 
-    /* 위로 숨길 때 (스크롤 다운 시) */
-    .header-hide {
-      transform: translateY(-100%);
-    }
-
-    /* 다시 나타날 때 (스크롤 업 시) */
-    .header-show {
-      transform: translateY(0);
+    /* 스크롤이 내려갔을 때 헤더가 살짝 더 슬림해지거나 그림자가 진해지는 효과 (선택사항) */
+    .sticky-top.scrolled {
       box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      background: rgba(255, 255, 255, 0.98); /* 살짝 투명하게 가능 */
     }
 
     .top-bar {
@@ -66,7 +61,6 @@
       transition: 0.3s; padding: 8px 15px; border-radius: 4px;
     }
     .nav-links a.active { background-color: #F15A22; color: #fff; } 
-    .mobile-menu-logo, .close-menu, .menu-footer { display: none; } 
 
     .menu-toggle {
       display: none; font-size: 30px; cursor: pointer;
@@ -83,6 +77,7 @@
       display: none; box-shadow: 0 4px 12px rgba(0,0,0,0.3);
     }
 
+    /* 모바일 스타일 */
     @media (max-width: 1024px) {
       .header-wrapper { padding: 0 20px; height: 70px; justify-content: flex-start; gap: 20px; }
       .menu-toggle { display: block; order: 1; } 
@@ -98,9 +93,9 @@
         align-items: flex-start; gap: 10px;
       }
       .nav-links.active { left: 0; }
-      .nav-links a { width: 100%; padding: 12px 20px; }
-      .mobile-menu-logo { display: block; margin-bottom: 30px; } 
-      .close-menu { display: block; position: absolute; top: 20px; right: 20px; font-size: 24px; color: #ccc; }
+      .close-menu { display: block; position: absolute; top: 20px; right: 20px; font-size: 24px; color: #ccc; cursor: pointer; }
+      .mobile-menu-logo { display: block; margin-bottom: 30px; }
+      .mobile-menu-logo img { height: 35px; }
       .menu-footer { display: block; margin-top: 60px; padding-top: 20px; border-top: 1px solid #eee; width: 100%; }
       .footer-name { display: block; font-family: 'Oswald', sans-serif; font-size: 16px; font-weight: 500; color: #333; }
       .footer-team { display: block; font-family: 'Oswald', sans-serif; font-size: 11px; color: #F15A22; margin-top: 4px; }
@@ -150,7 +145,6 @@
 
     const header = document.getElementById('mainHeader');
     const topBtn = document.getElementById('fixedTopBtn');
-    let lastScrollY = window.scrollY;
 
     window.addEventListener('scroll', () => {
       const currentScrollY = window.scrollY;
@@ -162,18 +156,12 @@
         topBtn.style.display = 'none';
       }
 
-      // 2. 스마트 헤더 제어
-      if (currentScrollY > lastScrollY && currentScrollY > 150) {
-        // 아래로 스크롤 중 + 어느 정도 내려옴 -> 헤더 숨김
-        header.classList.add('header-hide');
-        header.classList.remove('header-show');
+      // 2. 헤더 스크롤 상태 표시 (스크롤 시 그림자를 더 진하게 하는 등 효과용)
+      if (currentScrollY > 50) {
+        header.classList.add('scrolled');
       } else {
-        // 위로 스크롤 중 -> 헤더 나타남
-        header.classList.add('header-show');
-        header.classList.remove('header-hide');
+        header.classList.remove('scrolled');
       }
-
-      lastScrollY = currentScrollY;
     });
 
     function scrollToTop() {
