--- a/index.html
+++ b/index.html
@@ -161,7 +161,15 @@
       </nav>
     </header>
   </div>
-
+ <div class="sticky-top">
+    <div class="top-bar">OFFICIAL WEBSITE OF JOSHUA HONG | UTSA </div>
+    <header class="header-wrapper">
+      <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+      
+      <a href="index.html" class="logo-area">
+        <img src="images/joshua-hong-logo-nombre.jpg" alt="Joshua Hong Golf" class="logo-img"> 
+        <span class="logo-text">Joshua Hong Golf</span>
+      </a>
   <nav class="nav-links" id="navLinks" style="display:none;">
       <span class="close-menu" onclick="toggleMenu()">✕</span>
       <div class="mobile-menu-logo">
