--- a/index.html
+++ b/index.html
@@ -411,8 +411,9 @@
   }
 </style>
     
-
-    
+</body>
+ </head>
+  
     <div style="position: relative; z-index: 2;">
       <span style="display: block; font-size: 13px; color: #c98a2e; font-weight: 800; letter-spacing: 4px; margin-bottom: 8px; text-transform: uppercase;">
         Joshua Hong Status
